<resources>

    //menu description
    <string name="menu_main">Main screen</string>
    <string name="menu_add_meal">Add a meal</string>
    <string name="menu_history">Show history</string>
    <string name="menu_show_item">Show all items</string>
    <string name="menu_create_item">Create an item</string>

    //AddNewRepasActivity
    <string name="no_weight_entered">Please enter a weight</string>

    //AlertDialog if new item on AddNewRepasActivity
    <string name="title_add_new_item_alert">Add an item ?</string>
    <string name="message_add_new_item_alert">There is no matching item in the database. Do you want to create it now ?</string>
    <string name="message_dialog_known">Do you know the CO2 equivalent of your item ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    //AddNewItemTypeActivity
    <string name="title_create_item">Create a new item</string>
    <string name="known_equivalent">I know the CO2 equivalent of my item</string>
    <string name="unknown_equivalent">I do not know the equivalent</string>
    <string name="choose_from_firebase">Choose an item from the community</string>

    //AddNewItemKnownActivity
    <string name="add_new_item_kown_equivalent">Item  CO2 equivalent (g of C02/100g) : </string>
    <string name="no_name_entered">Please enter a name</string>
    <string name="no_equivalent_entered">Please enter an equivalent</string>

    //AddNewItemActivity
    <string name="not_enough_ingredients">Please enter at least 2 ingredients</string>
    <string name="no_proportion_entered">Please enter proportions by clicking on the item</string>
    <string name="no_composed_item_can_be_input">This item is composed of other items. Only base item (which are not composed) can be added</string>

    <string name="app_name">FoodEqC</string>
    <string name="new_composedItem_name">Item name</string>
    <string name="new_composedItem_add_ingredient">Choose an Ingredient</string>
    <string name="set_proportion_title">Set ingredient proportion</string>
    <string name="delete_ingredient">Delete</string>
    <string name="confirm_proportion">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="addIngredient">Add</string>
    <string name="create_item">Create</string>
    <string name="create_item_main">Create Item</string>
    <string name="create_repas_main">Add Meal</string>
    <string name="choose_repas_type">Choose the type of meal</string>
    <string name="break_fast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="ingredient_alreay_on_the_list">This ingredient is already on the list !</string>
    <string name="existing_items_show">List of existing items</string>
    <string name="itemToString1"> has an equivalent of </string>
    <string name="itemToString2"> gCO2/100g and is </string>
    <string name="item_alreaydy_on_db">This item is already on the database !</string>
    <string name="new_repas_date">Date :</string>
    <string name="ingredient_alreay_exist">This ingredient is already on the list !</string>
    <string name="item_does_not_exist">No matching item in database</string>
    <string name="addRepasItem">Add item to meal</string>
    <string name="addRepasItemWeight">Weight (in gram) :</string>
    <string name="repasItem">Item :</string>
    <string name="save">Save</string>
    <string name="repasItemList">Items in you meal :</string>
    <string name="alertDialogDeleteItemRepas">Do you really want to delete this item ?</string>
    <string name="delete_item_repas">Delete</string>
    <string name="cancel_delete_item_repas">Cancel</string>
    <string name="item_not_found_error">Item not found !</string>
    <string name="item_repas_deleted">: item deleted !</string>
    <string name="set_weight_title">Set item weight</string>
    <string name="item_repas_weigth_set">\'s weigth set to</string>


    <string name="ingredient">Ingredient</string>
    <string name="proportion">Proportion</string>
    <string name="ingredient_equivalent">Ingredient Equivalent</string>

    //Item Type
    <string name="type">Type</string>
    <string name="all">All</string>
    <string name="base">Base</string>
    <string name="composed">composed</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>

    <string name="item_repas_already_on_db">Item already in the meal !</string>

    <string-array name="item_type">
        <item>@string/all</item>
        <item>@string/base</item>
        <item>@string/composed</item>
        <item>@string/imported</item>
        <item>@string/created</item>
    </string-array>

    <string name="item_name">Item name</string>
    <string name="CO2_equivalent"> gramme of CO2 equivalent per 100g</string>
    <string name="CO2_equivalent_short"> gC02/100g </string>

    <string name="beef_meat">Beef Meat</string>
    <string name="pork_meat">Porc Meat</string>
    <string name="wheat">Wheat</string>
    <string name="potatoes">Potatoes</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="tomatoes_greenhouse">Tomatoes grown in greenhouses</string>
    <string name="letuce">Letuce</string>
    <string name="letuce_greenhouse">Letuce grown in greehouses</string>
    <string name="cucomber">Cucomber</string>
    <string name="cucomber_greenhouses">Cucomber grown in greehouses</string>
    <string name="grapes">Grapes</string>
    <string name="flour">Flour</string>
    <string name="bread">Bread</string>
    <string name="sugar">Sugar</string>
    <string name="alcohol_pure">Alcohol Pure</string>
    <string name="wine">Wine</string>
    <string name="calf_meat">Calf meat</string>
    <string name="cow_milk_whole">Cow Milk (whole)</string>
    <string name="yoghurt">Yoghurt</string>
    <string name="cheese">Cheese</string>
    <string name="butter">Butter</string>
    <string name="chicken_meat_battery">Chicken meat (battery)</string>
    <string name="mutton_meat">Mutton meat</string>
    <string name="egg">Egg</string>
    <string name="milk_lamb">Milk fed lamp meat</string>
    <string name="sea_fish_france">Sea fish from near coasts</string>
    <string name="remote_fish">Remote sea fish (tuna for instance)</string>
    <string name="shrinks">Shrinks</string>
    <string name="turkey_meat">Turkey meat</string>
    <string name="duck_meat">Duck meat</string>
    <string name="free_range_chicken">Chicken meat (free range)</string>
    <string name="guinea_fowl_meat">Guinea fowl meat</string>

    <string name="pasta">Pasta</string>
    <string name="rice">Rice</string>
    <string name="semoule">Semolina</string>
    <string name="viennoiserie">Pastry</string>
    <string name="biscuits">biscuits</string>
    <string name="patisserie">Cake</string>
    <string name="charcuterie">Pork product</string>
    <string name="vegetables_no_potatoes">Vegetables, except potatoes</string>
    <string name="dried_pulse">Dried pulses</string>
    <string name="fruits">Fruits</string>
    <string name="pizza">Pizza</string>
    <string name="sandwitch">Sandwitch</string>
    <string name="soup">Soup</string>
    <string name="industrial_meals">Industrial meals</string>
    <string name="stewed_fruits">Stewed Fruits</string>
    <string name="water_bottled">Bottled water</string>
    <string name="fruit_juice">Fruit Juice</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>

    <string name="warning">Warning</string>
    <string name="restaure_db">Restaure default database</string>
    <string name="restaure_db_warning">This will delete all custom and imported items. Do you want to proceed ?</string>
    <string name="all_meals_list">List of all meals</string>
    <string name="type_with_two_points">Type :</string>
    <string name="date_with_two_points">Date :</string>
    <string name="CO2_equivalent_with_two_points">CO2 Equivalent :</string>
    <string name="delete">Delete</string>
    <string name="alertDialogDeleteRepas">Do you really want to delete this meal ?</string>
    <string name="meal">Meal</string>
    <string name="deleted">deleted</string>
    <string name="statistics">Statistics</string>
    <string name="set_number_days_for_graph_stats">Number of days shown in the graph</string>
    <string name="last_5_days_emission">Last 5 days emissions</string>
    <string name="emission_per_day_average">Emission per day average : </string>
    <string name="welcome_to_foodeqc">Welcome to FoodEqC !</string>
    <string name="warning_cannot_modify_base_item">Warning ! You can\'t modify or delete a base item !</string>
    <string name="today_emission">Today\'s emission :</string>

    <string name="average_emission_per_day">6600</string>
    <string name="show_all_items">Show all items</string>
    <string name="manage_item">Manage items</string>
    <string name="show_all_meals">Show all meals</string>
    <string name="list_of_ingredient">List of ingredient :</string>
    <string name="item_name_with_two_points">Name :</string>
    <string name="proportion_with_two_points">Proportion :</string>

</resources>
