<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_repas_type_textview"
        android:text="@string/choose_repas_type"
        android:textColor="#000000"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/break_fast"
        android:id="@+id/button_break_fast"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        android:id="@+id/button_lunch"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:id="@+id/button_dinner"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snack"
        android:id="@+id/button_snack"
        android:layout_gravity="center_horizontal" />
</LinearLayout>