<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="20px"
        android:layout_height="40px" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/new_composedItem_name"
            android:paddingRight="100dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAddItemName"
            android:paddingLeft="20dp"
            android:paddingRight="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_composedItem_add_ingredient"
            android:id="@+id/textView2"
            android:paddingRight="37dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAddIngredient"
            android:paddingRight="70dp" />

        <Space
            android:layout_width="50px"
            android:layout_height="20px" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addIngredient"
            android:id="@+id/buttonAddIngredient" />

    </LinearLayout>

    <!--
    this will hold the list of currently declared ingredients.
    By clicking on an item, user will be able to set it proportion
    -->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/listViewIngredients"
        android:layout_weight="0.5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="0.15">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_item"
            android:id="@+id/buttonCreateItem" />
    </LinearLayout>

</LinearLayout>