<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/title_create_item"
        android:id="@+id/textView8"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/new_composedItem_name"
            android:paddingRight="0dp"
            android:layout_weight="0.3" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextAddItemNameKnown"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_weight="0.5" />

        <Space
            android:layout_width="0px"
            android:layout_height="20px"
            android:layout_weight="0.2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_new_item_kown_equivalent"
            android:id="@+id/textView2"
            android:paddingRight="0dp"
            android:layout_weight="0.7" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextKnownEquivalent"
            android:layout_weight="0.3" />


    </LinearLayout>

    <!--
    this will hold the list of currently declared ingredients.
    By clicking on an item, user will be able to set it proportion
    -->

    <Space
        android:layout_width="20px"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_item"
        android:id="@+id/buttonCreateItemKnownEquivalent"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

</LinearLayout>