<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Item name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/textViewItemName"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_with_two_points"
            android:textColor="@color/black"
            android:id="@+id/textViewType"
            android:paddingRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textViewTypeValue" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CO2_equivalent_with_two_points"
            android:textColor="@color/black"
            android:id="@+id/textView"
            android:paddingRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CO2_equivalent"
            android:id="@+id/textViewEquivalentValue" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_of_ingredient"
            android:id="@+id/textViewIngredient"
            android:textColor="@color/black"
            android:textStyle="bold"/>


    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/listViewIngredient"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5" />

</LinearLayout>